@@ -1,3 +1,12 @@
+2007-02-10  David Trowbridge  <trowbrds@gmail.com>
+
+	* src/fe-gnome/preferences-page-dcc.c:
+	* src/fe-gnome/preferences-page-dcc.h:
+	  - Clean up some ugly code.
+
+	* src/fe-gnome/userlist-gui.c:
+	  - Make sure to return a value.
+
 2007-02-09  David Trowbridge  <trowbrds@gmail.com>
 
 	* Makefile.am:
